--- a/.github/workflows/terraform-module-release.yml
+++ b/.github/workflows/terraform-module-release.yml
@@ -21,27 +21,27 @@ permissions:
   contents: write
 
 jobs:
-  deploy:
-    name: Deploy to S3
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+  # deploy:
+  #   name: Deploy to S3
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v3
 
-      - name: Authenticate AWS CLI
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          role-to-assume: ${{ secrets.deploy-role-arn }}
-          aws-region: ${{ inputs.aws-region }}
+  #     - name: Authenticate AWS CLI
+  #       uses: aws-actions/configure-aws-credentials@v1
+  #       with:
+  #         role-to-assume: ${{ secrets.deploy-role-arn }}
+  #         aws-region: ${{ inputs.aws-region }}
 
-      - name: Build Module Archive File
-        run: make module.package
+  #     - name: Build Module Archive File
+  #       run: make module.package
 
-      - name: Deploy to S3 Registry
-        run: |
-          MODULE_VERSION=$(cat VERSION)
-          aws s3 cp .build/$MODULE_VERSION.zip \
-            s3://knox.us-east-2.tfmodule-registry/${{ inputs.module-name }}/$MODULE_VERSION.zip
+  #     - name: Deploy to S3 Registry
+  #       run: |
+  #         MODULE_VERSION=$(cat VERSION)
+  #         aws s3 cp .build/$MODULE_VERSION.zip \
+  #           s3://knox.us-east-2.tfmodule-registry/${{ inputs.module-name }}/$MODULE_VERSION.zip
 
   tag_repo:
     name: Tag Repo
