fixes missing 'terraform init' for Terraform Plan step

--- a/.github/workflows/terraform-root-module-build.yml
+++ b/.github/workflows/terraform-root-module-build.yml
@@ -43,4 +43,4 @@ jobs:
 
       - name: Terraform Plan
         if: ${{ inputs.run-plan }}
-        run: terraform plan -out=apply.plan
+        run: terraform init && terraform plan -out=apply.plan
